# GenAI-Assessment

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.cache/: cache.db
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
GenAI-Assessment-simple/: .env.example  .gitignore  LICENSE  README.md  REMOVED_FOR_PRODUCTION.md  calibrate.py  calibration_words.json  pyproject.toml
GenAI-Assessment-simple/.github/workflows/: ci.yml
GenAI-Assessment-simple/chatbot/: requirements.txt
GenAI-Assessment-simple/chatbot/api/: main.py
GenAI-Assessment-simple/chatbot/core/: config.py  knowledge.py
GenAI-Assessment-simple/chatbot/tests/: conftest.py  test_api.py  test_knowledge.py  test_prompts.py
GenAI-Assessment-simple/form_extraction/: __init__.py
GenAI-Assessment-simple/form_extraction/core/: __init__.py  config.py  extractor.py  field_regions.py  ocr.py  pipeline.py  schemas.py  validate.py
GenAI-Assessment-simple/tests/: test_e2e.py  test_live.py  test_validate.py
chatbot/: DESIGN.md  README.md  run_chatbot.py
chatbot/api/: main.py
chatbot/core/: config.py  knowledge.py  logger.py  prompts.py  retrieval.py
chatbot/ui/: app.py
common/: __init__.py  cache.py  config.py  errors.py  logger.py  logging_config.py  security.py
common/clients/: doc_intelligence.py  openai_client.py  retry.py
form_extraction/: DESIGN.md  README.md  __init__.py
form_extraction/backend/: pipeline.py  schemas.py
form_extraction/backend/extraction/: extractor.py  prompts.py
form_extraction/backend/ocr/: layout.py
form_extraction/backend/validation/: judge.py  report.py  rules.py
form_extraction/core/: __init__.py  config.py  digits.py  extractor.py  ocr.py  pipeline.py  prompts.py  schemas.py  validate.py
form_extraction/frontend/: streamlit_app.py
form_extraction/ui/: __init__.py  app.py
medical_chatbot/: README.md
tests/: conftest.py  test_e2e.py  test_validate.py
tests/chatbot/: conftest.py  test_api.py  test_knowledge.py  test_prompts.py  test_retrieval.py
tests/common/: test_security.py
tests/fixtures/ocr_cache/: 283_ex2.txt  283_ex3.txt
tests/form_extraction/: test_digits.py  test_e2e.py  test_live.py  test_pipeline_integration.py  test_prompts.py  test_schema.py  test_schemas.py  test_validate.py  test_validation_rules.py
tests/form_extraction/fixtures/ocr_cache/: 283_ex1.json  283_ex1.txt  283_ex2.json  283_ex3.json
