[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "form-extractor"
version = "0.1.0"
description = "Bituach Leumi Form 283 field extraction with Azure Document Intelligence + Azure OpenAI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "azure-ai-documentintelligence>=1.0.2,<2.0.0",
  "openai>=1.70.0,<3.0.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "streamlit>=1.40,<2.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.7,<1.0",
]
# Part 2 — chatbot microservice
chatbot = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "requests>=2.32,<3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["form_extraction*", "chatbot*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# The assignment mandates camelCase JSON keys; mirroring them in the schema.
"form_extraction/core/schemas.py" = ["N815"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "integration: requires RUN_AZURE_TESTS=1 and live Azure credentials",
]
